--- a/style.css
+++ b/style.css
@@ -9,3 +9,32 @@
     --menu-hover-color: #EDD98B;
     --font-inter: 'Inter', sans-serif;
 }
+
+.navbar {
+    height: 82px;
+    width: 100vw;
+    background-color: var(--primary-color);
+    font-family: var(--font-inter);
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.active {
+    background-color: var(--menu-hover-color);
+    border-radius: 5px;
+}
+
+.btn-signup,
+.btn-login {
+    /* padding: 5px 25px; */
+    width: 122px;
+    height: 39px;
+}
+
+.btn-signup {
+    background-color: var(--primary-color);
+}
+
+.btn-login {
+    background-color: var(--secondary-color);
+}
