--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@
     --font-inter: 'Inter', sans-serif;
 }
 
+/* navbar style start */
+
 .navbar {
     height: 82px;
-    width: 100vw;
+    width: 100%;
     background-color: var(--primary-color);
     font-family: var(--font-inter);
     font-weight: 400;
@@ -38,3 +40,73 @@
 .btn-login {
     background-color: var(--secondary-color);
 }
+
+/* navbar style end  */
+
+
+
+/* footer style start  */
+
+footer {
+    height: 254px;
+    width: 100%;
+    background-color: #000;
+    color: white;
+    padding: 0 70px;
+    font-family: var(--font-inter);
+    font-weight: 400;
+
+
+}
+
+footer .row {
+    flex-wrap: nowrap;
+}
+
+
+footer h3 {
+    font-weight: 600;
+    font-size: 20px;
+}
+
+footer p {
+    font-size: 16px;
+
+}
+
+footer .download {
+    position: relative;
+}
+
+footer .download img {
+    position: absolute;
+    top: -2px;
+    left: 5px;
+
+}
+
+footer .social-icon {
+    background-color: var(--primary-color);
+    color: #000;
+    border-radius: 50%;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+
+}
+
+footer span:not(:last-child) {
+    margin-right: 20px;
+}
+
+footer .contact i {
+    color: var(--primary-color);
+    width: 13px;
+    height: 17px;
+}
+
+footer .contact p {
+    font-size: 13px;
+}
+
+/* footer style end  */
