--- a/style.css
+++ b/style.css
@@ -24,9 +24,10 @@ body {
     font-family: var(--font-inter);
     font-weight: 400;
     font-size: 16px;
+    box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.25);
 }
 
-.active {
+.active-menu {
     background-color: var(--menu-hover-color);
     border-radius: 5px;
 }
@@ -48,6 +49,39 @@ body {
 
 
 /* main section start  */
+
+/* slider  */
+.carousel {
+    min-height: 100vh;
+}
+
+.carousel-item {
+    height: 90vh;
+    background-image: url(./images/slider/slider-airplane.png);
+    background-repeat: no-repeat;
+    background-position: 47%, 50%;
+    background-size: 35%;
+}
+
+.carousel-item>div {
+    height: 100%;
+}
+
+.carousel-item h3 {
+    font-weight: 700;
+    font-size: 54px;
+    line-height: 77.45px
+}
+
+.carousel-item h3>span {
+    color: var(--primary-color);
+}
+
+.carousel-item p {
+    font-weight: 400;
+    font-size: 20px;
+    margin-top: 32px;
+}
 
 /* track delivery section  */
 .track-delivery {
@@ -204,6 +238,7 @@ footer {
     padding: 0 70px;
     font-family: var(--font-inter);
     font-weight: 400;
+    margin-top: 122px;
 
 
 }
