--- a/style.css
+++ b/style.css
@@ -39,6 +39,16 @@ body {
     margin-right: 150px;
 }
 
+.nav-item {
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+    transition: border 0.5s;
+}
+
+.nav-item:hover {
+    border: 1px solid black;
+}
+
 .active-menu {
     background-color: var(--menu-hover-color);
     border-radius: 5px;
