--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
+@import url("./header.css");
+
+@import url("./footer.css");
 
 /* css variables */
 :root {
@@ -13,60 +16,6 @@
 body {
     background-color: var(--secondary-color);
     font-family: var(--font-inter);
-}
-
-/* navbar style start */
-
-.navbar {
-    height: 82px;
-    width: 100%;
-    background-color: var(--primary-color);
-    font-family: var(--font-inter);
-    font-weight: 400;
-    font-size: 16px;
-    box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.25);
-}
-
-.navbar-collapse {
-    background-color: var(--primary-color);
-}
-
-.navbar li:not(last-child) {
-    margin-right: 30px;
-}
-
-.navbar-nav {
-    margin-right: 150px;
-}
-
-.nav-item {
-    border: 1px solid var(--primary-color);
-    border-radius: 5px;
-    transition: border 0.5s;
-}
-
-.nav-item:hover {
-    border: 1px solid black;
-}
-
-.active-menu {
-    background-color: var(--menu-hover-color);
-    border-radius: 5px;
-}
-
-.btn-signup,
-.btn-login {
-    /* padding: 5px 25px; */
-    width: 122px;
-    height: 39px;
-}
-
-.btn-signup {
-    background-color: var(--primary-color);
-}
-
-.btn-login {
-    background-color: var(--secondary-color);
 }
 
 
@@ -254,82 +203,8 @@ body {
 
 
 
-/* footer style start  */
-
-footer {
-    min-height: 254px;
-    width: 100%;
-    background-color: #000;
-    color: white;
-    padding: 0 70px;
-    font-family: var(--font-inter);
-    font-weight: 400;
-    margin-top: 122px;
 
 
-}
-
-footer .row {
-    flex-wrap: nowrap;
-}
-
-
-footer h3 {
-    font-weight: 600;
-    font-size: 20px;
-}
-
-footer p {
-    font-size: 16px;
-}
-
-footer p a {
-    text-decoration: none;
-    color: white;
-}
-
-footer p a:hover {
-    color: var(--primary-color);
-}
-
-
-
-footer .download {
-    position: relative;
-}
-
-footer .download img {
-    position: absolute;
-    top: -2px;
-    left: 5px;
-
-}
-
-footer .social-icon {
-    background-color: var(--primary-color);
-    color: #000;
-    border-radius: 50%;
-    display: inline-block;
-    width: 25px;
-    height: 25px;
-
-}
-
-footer span:not(:last-child) {
-    margin-right: 20px;
-}
-
-footer .contact i {
-    color: var(--primary-color);
-    width: 13px;
-    height: 17px;
-}
-
-footer .contact p {
-    font-size: 13px;
-}
-
-/* footer style end  */
 
 
 /* responsive part  */
@@ -392,21 +267,7 @@ footer .contact p {
         margin-right: 10px;
     }
 
-    footer .row {
-        justify-content: center;
-    }
 
-    footer .row .col {
-        margin-top: 40px;
-        text-align: center;
-    }
-
-
-
-    footer .download img {
-        position: relative;
-
-    }
 
 
 
