active menu is added

--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,13 @@
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
+@import url("./common.css");
+
 @import url("./header.css");
 
 @import url("./footer.css");
 
-/* css variables */
-:root {
-    --primary-color: #FFCC00;
-    --secondary-color: #F5F5F5;
-    --menu-hover-color: #EDD98B;
-    --font-inter: 'Inter', sans-serif;
-}
 
-body {
-    background-color: var(--secondary-color);
-    font-family: var(--font-inter);
-}
 
 
 /* main section start  */
