--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
+@import url("./common.css");
+
 @import url("./header.css");
 
 @import url("./footer.css");
