--- a/css/contact.css
+++ b/css/contact.css
@@ -5,3 +5,92 @@
 @import url("./header.css");
 
 @import url("./footer.css");
+
+.contact h3 {
+    font-family: var(--font-inter);
+    font-weight: 600;
+    margin-top: 60px;
+    margin-bottom: 94px;
+}
+
+.contact-form {
+    width: 100%;
+}
+
+.contact-card {
+    width: 295px;
+    height: 295px;
+    background-color: var(--secondary-color);
+    padding: 20px;
+}
+
+.contact-card-title {
+    font-family: var(--font-inter);
+    font-weight: 600;
+    font-size: 18px;
+    margin-top: 17px;
+    margin-bottom: 10px;
+}
+
+.contact-card-info {
+    font-family: var(--font-inter);
+    font-weight: 400;
+    font-size: 15.5px;
+}
+
+
+
+.contact-form-value {
+    width: 500px;
+    height: 610px;
+    background: var(--secondary-color);
+    box-shadow: 2px 6px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    padding: 40px;
+}
+
+.contact-form input {
+    width: 100%;
+    height: 55px;
+    background-color: var(--secondary-color);
+    border: 2px solid #FFCC00;
+    border-radius: 5px;
+    padding-left: 15px;
+    margin-bottom: 30px;
+}
+
+.contact-form textarea {
+    width: 100%;
+    background-color: var(--secondary-color);
+    border: 2px solid #FFCC00;
+    border-radius: 5px;
+    padding-left: 15px;
+    margin-bottom: 30px;
+}
+
+.contact-form button {
+    width: 90px;
+    height: 40px;
+    background: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+    font-family: var(--font-inter);
+    font-weight: 600;
+}
+
+@media only screen and (max-width: 600px) {
+
+    .contact-form .row {
+        flex-direction: column-reverse;
+    }
+
+    .contact-form .row .col {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .contact-form-value {
+        width: 100%;
+    }
+}
