--- a/css/faq.css
+++ b/css/faq.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 @import url("./common.css");
 
 @import url("./header.css");
@@ -12,4 +11,42 @@ main h3 {
     margin-top: 60px;
     margin-bottom: 50px;
 
+}
+
+.faq-card {
+    width: 100%;
+    height: 88px;
+    background: var(--secondary-color);
+    box-shadow: 2px 6px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin-bottom: 30px;
+}
+
+.faq-card .que {
+    font-family: var(--font-inter);
+    font-weight: 500;
+    font-size: 17px;
+}
+
+.btn img {
+    width: 31px;
+    height: 31px;
+}
+
+
+.modal-dialog {
+    top: 25%;
+
+}
+
+.modal-content {
+    background-color: var(--secondary-color);
+    box-shadow: 2px 6px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+
+.modal-title {
+    font-family: var(--font-inter);
+    font-weight: 500;
+    font-size: 18px;
 }
