--- a/css/style.css
+++ b/css/style.css
@@ -163,11 +163,42 @@
     font-weight: 600;
 }
 
-.sponsor-section img {
-    margin: 0 auto;
+
+
+.sponsor-section .sponsor1 img {
+    width: 101px;
+    height: 76px;
 }
 
+.sponsor-section .sponsor2 img {
+    width: 30px;
+    height: 50px;
+}
 
+.sponsor-section .sponsor3 img {
+    width: 101px;
+    height: 49px;
+}
+
+.sponsor-section .sponsor4 img {
+    width: 95px;
+    height: 70px;
+}
+
+.sponsor-section .sponsor5 img {
+    width: 101px;
+    height: 100px;
+}
+
+.sponsor-section .sponsor6 img {
+    width: 71px;
+    height: 42px;
+}
+
+.sponsor-section .sponsor {
+    width: 100%;
+    height: 100px;
+}
 
 /* feature section  */
 
