--- a/css/common.css
+++ b/css/common.css
@@ -7,8 +7,14 @@
     --font-inter: 'Inter', sans-serif;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: var(--body-color);
     font-family: var(--font-inter);
-    width: 100vw;
+    width: 100%;
 }
